--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,24 +2,21 @@ name: Deploy Vite Landing Page
 
 on:
   push:
-    branches: [master]
+    branches: [ master ]
   pull_request:
-    branches: [master]
+    branches: [ master ]
 
+# Разрешения, необходимые для deploy-pages@v4:
 permissions:
-  contents: read
-  pages: write
-  id-token: write
+  contents: read        # обязательно для checkout
+  pages: write          # запись в Pages
+  id-token: write       # OIDC-токен для проверки окружения
 
 jobs:
-  build-deploy:
+  build:
     runs-on: ubuntu-latest
-    concurrency:
-      group: 'pages'
-      cancel-in-progress: true
-
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup Node.js
@@ -37,12 +34,21 @@ jobs:
       - name: Configure Pages
         uses: actions/configure-pages@v5
 
-      - name: Upload artifact
+      - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./dist
 
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
+    environment:
+      name: github-pages            # ⚠️ обязательно для deploy-pages@v4 :contentReference[oaicite:0]{index=0}
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-
