--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.6",
     "@tailwindcss/postcss": "^4.1.11",
     "aos": "^2.3.4",
     "framer-motion": "^12.23.9",
