--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,6 +38,12 @@ jobs:
       - name: Add SPA fallback (404.html)
         run: cp dist/index.html dist/404.html
 
+      - name: Disable Jekyll processing
+        run: touch dist/.nojekyll
+
+      - name: List dist
+        run: ls -la dist && ls -la dist/assets
+
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
